--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ val fruitSummary = "I have ${apples + oranges} " +
                    "pieces of fruit."
 </code></pre></div><div class="card"><div class="lang">JavaScript</div><pre class="code"><code>let apples = 3
 let oranges = 5
-let fruitSummary = "I have ${apples + oranges} " +
+let fruitSummary = `I have ${apples + oranges} ` +
                    "pieces of fruit."
 </code></pre></div></div></div><div class="case"><div class="name">Range Operator</div><div class="pair"><div class="card"><div class="lang">Swift</div><pre class="code"><code>let names = ["Anna", "Alex", "Brian", "Jack"]
 let count = names.count
